--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   </head>
   <body>
     <script src="js.js" type="module"></script>
+    <script src="groupJs.js" type="module"></script>
   </body>
 </html>
